Fix HTML encoding issues in PayrollDashboard.html

--- a/PayrollDashboard.html
+++ b/PayrollDashboard.html
@@ -138,12 +138,12 @@
         //  Mock data (can fetch data from API) 
         const summaryData = {
             employees: {
-                current: 120,
-                previous: 115
+                current: 7,
+                previous: 1
             },
             expenses: {
                 labels: ["Aug", "Sep", "Oct", "Nov"],
-                values: [410000, 405000, 420000, 450000] // last is "current month"
+                values: [410000, 405000, 420000, 450000] 
             }
         };
 
@@ -274,4 +274,5 @@
     </script>
 </body>
 </html>
+
 
